# shy-haskell-intro-notes

./: .gitignore  build_everything.sh
demo01-hello-world/: README.md  demo01-hello-world.cabal
demo02-simple-samples/: README.md  demo02-simple-samples.cabal
demo02-simple-samples/app/: Main.hs
demo03-monads-are-monoids/: Makefile  main.cpp
demo04-simple-monads-in-haskell/: README.md  demo04-simple-monads-in-haskell.cabal
demo04-simple-monads-in-haskell/app/: Main.hs
demo05-statements-vs-expressions/: main.cpp
demo06-complete-the-monad/: README.md  demo06-complete-the-monad.cabal
demo06-complete-the-monad/app/: Main.hs
demo07-logging-monad/: README.md  demo07-logging-monad.cabal
demo07-logging-monad/app/: Main.hs
demo08-coroutines-monad-style/: README.md  demo08-coroutines-monad-style.cabal
demo08-coroutines-monad-style/app/: Main.hs
demo09-monadic-parser-combinators/: README.md  demo09-monadic-parser-combinators.cabal
demo09-monadic-parser-combinators/app/: Main.hs
demo10-haskell-hello-helm/: README.md  demo10-haskell-hello-helm.cabal  stack.yaml
demo10-haskell-hello-helm/app/: Main.hs
demo11-haskell-helm-with-agents/: README.md  demo11-haskell-helm-with-agents.cabal  stack.yaml
demo11-haskell-helm-with-agents/app/: Main.hs
demo12-quickcheck/: README.md  demo12-quickcheck.cabal
demo12-quickcheck/app/: Main.hs
