name:                demo04-simple-monads-in-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demo04-simple-monads-in-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              John Kenyon
maintainer:          JLKenyon@gmail.com
copyright:           2017 John Kenyon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo04-simple-monads-in-haskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/demo04-simple-monads-in-haskell
