name:                demo06-complete-the-monad
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demo06-complete-the-monad#readme
license:             BSD3
license-file:        LICENSE
author:              John KEnyon
maintainer:          JLKenyon@gmail.com
copyright:           2017 John Kenyon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo06-complete-the-monad-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/demo06-complete-the-monad
