name:                demo08-coroutines-monad-style
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demo08-coroutines-monad-style#readme
license:             BSD3
license-file:        LICENSE
author:              John Kenyon
maintainer:          JLKenyon@gmail.com
copyright:           2017 John Kenyon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo08-coroutines-monad-style-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       gloss >= 1.10.2.5,
                       free >= 4.12.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/demo08-coroutines-monad-style
