name:                demo09-monadic-parser-combinators
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demo09-monadic-parser-combinators#readme
license:             BSD3
license-file:        LICENSE
author:              John Kenyon
maintainer:          JLKenyon@gmail.com
copyright:           2017 John Kenyon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo09-monadic-parser-combinators-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       parsec >= 3.1.11
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/demo09-monadic-parser-combinators
