name:                demo10-haskell-hello-helm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demo10-haskell-hello-helm#readme
license:             BSD3
license-file:        LICENSE
author:              John Kenyon
maintainer:          JLKenyon@gmail.com
copyright:           2017 John Kenyon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo10-haskell-hello-helm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , helm >= 1.0.0
                     , elerea >= 2.9.0
                     , linear >= 1.20.6
                                                                 
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/demo10-haskell-hello-helm
