name:                demo11-haskell-helm-with-agents
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/demo11-haskell-helm-with-agents#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable demo11-haskell-helm-with-agents-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , helm >= 1.0.0
                     , elerea >= 2.9.0
                     , linear >= 1.20.6
                     , free >= 4.12.4
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/demo11-haskell-helm-with-agents
